fixed close button alignment issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -69,7 +69,7 @@
   &__close {
     position: absolute;
     top: 15px;
-    right: 35px;
+    right: 15px;
     color: #f1f1f1;
     font-size: 40px;
     font-weight: bold;
